--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,20 @@
 spring.application.name=demo
+
+# Configurações do banco de dados
+spring.datasource.url=jdbc:mysql://localhost/bancoCache?createDatabaseIfNotExist=true&serverTimezone=America/Sao_Paulo&useSSL=false
+spring.datasource.username=root
+spring.datasource.password=bp1234
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+# Configurações do JPA e Hibernate
+spring.jpa.database=mysql
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.format-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+spring.jpa.show-sql=true
+
+# Configurações do Jackson
+spring.jackson.date-format=yyyy-MM-dd HH:mm:ss
+spring.jackson.time-zone=Brazil/East
+
+
