--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,4 +17,6 @@ spring.jpa.show-sql=true
 spring.jackson.date-format=yyyy-MM-dd HH:mm:ss
 spring.jackson.time-zone=Brazil/East
 
-
+#spring.data.redis.port=6379
+#spring.data.redis.host=localhost
+#spring.cache.type=redis
